test_case/rust-lang_rust/53225_415611810.rs
plain
[00:45:22] ....................................................................................................
[00:45:24] .......................................i............................................................
[00:45:27] .........................................................................................i.i..ii....
[00:45:30] ....................................................................................................
[00:45:33] ................................................................F................................i..
[00:45:39] ....................................................................................................
[00:45:42] ....................................................................................................
[00:45:45] ....................................................................................................
[00:45:48] ............................i.......................................................................
---
[00:46:03] ....................................................................................................
[00:46:08] ............i............................................................
[00:46:08] failures:
[00:46:08] 
[00:46:08] ---- [ui] ui/nll/user-annotations/dump-fn-method.rs stdout ----
[00:46:08] 
[00:46:08] 
[00:46:08] 1 error: user substs: Canonical { variables: [], value: [u32] }
[00:46:08] -   --> $DIR/dump-fn-method.rs:35:13
[00:46:08] +   --> $DIR/dump-fn-method.rs:36:13
[00:46:08] 3    |
[00:46:08] 4 LL |     let x = foo::<u32>; //~ ERROR [u32]
[00:46:08] 
[00:46:08] 6 
[00:46:08] 6 
[00:46:08] 7 error: user substs: Canonical { variables: [CanonicalVarInfo { kind: Ty(General) }, CanonicalVarInfo { kind: Ty(General) }], value: [?0, u32, ?1] }
[00:46:08] -   --> $DIR/dump-fn-method.rs:39:13
[00:46:08] +   --> $DIR/dump-fn-method.rs:42:13
[00:46:08] 
